--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>1.5.18.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.codeup</groupId>my
+    <groupId>com.codeup</groupId>
     <artifactId>springblog</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>springblog</name>
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
